--- a/entrega-main/pages/contacto.html
+++ b/entrega-main/pages/contacto.html
@@ -12,19 +12,17 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-
+        <nav class="navbar navbar-expand-lg bg-body-tertiary banner ">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" height="150px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown fuentes">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/noticias.html">Noticias</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../pages/imagenes.html">Imagenes</a>
                         </li>
@@ -34,12 +32,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
         </nav>
-
     </header>
     <main>
         <div class="title">
@@ -69,7 +65,7 @@
         </section>
     </main>
     <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio harum mollitia itaque molestiae voluptatem enim facere reprehenderit vitae est aperiam, voluptas aliquid laborum aliquam expedita quibusdam esse, eligendi natus tenetur?</p>
+        <p>Si tienes alguna pregunta, comentario o simplemente quieres más información, no dudes en ponerte en contacto con nosotros. Completa el formulario y te responderemos a la brevedad posible. ¡Estamos aquí para ayudarte!</p>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
