--- a/entrega-main/pages/noticias.html
+++ b/entrega-main/pages/noticias.html
@@ -15,19 +15,17 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-
+        <nav class="navbar navbar-expand-lg bg-body-tertiary banner ">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" height="150px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown fuentes">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/noticias.html">Noticias</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../pages/imagenes.html">Imagenes</a>
                         </li>
@@ -37,12 +35,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
         </nav>
-
     </header>
     <main>
         <div class="title">
@@ -54,7 +50,7 @@
                     <div class="card">
                         <img src="../img/noticia1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Premios</h5>
                             <p class="card-text">¡Nos enorgullece anunciar que hemos ganado el premio a la Mejor Calidad en Frutas Frescas 2024! Gracias a nuestros agricultores locales por su dedicación y a nuestros clientes por su apoyo. </p>
                         </div>
                     </div>
@@ -63,26 +59,26 @@
                     <div class="card">
                         <img src="../img/rasp.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Sin Pesticidas</h5>
+                            <p class="card-text">No utilizamos ningún pesticidas en nuestras cosechas, esto nos proporciona un producto real, un sabor más autentico y mejor calidad de producto. Siendo así más natural.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="../img/rasp.jpg" class="card-img-top" alt="...">
+                        <img src="../img/fresas.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Tenemos las mejores fresas de la región</h5>
+                            <p class="card-text">Contamos con las mejores fresas, las más sabrosas y de mayor tamaño que nuestros competidores, aparte al no tener intermediarios son más frescas</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="../img/rasp.jpg" class="card-img-top" alt="...">
+                        <img src="../img/frutas y verduras.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Furtas y Verduras súper frescas</h5>
+                            <p class="card-text">Eliminando intermediarios, nos aseguramos de la frescura de nuestros productos, entregando así la mejor calidad posible</p>
                         </div>
                     </div>
                 </div>
