--- a/entrega-main/index.html
+++ b/entrega-main/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary banner ">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="./index.html"><img src="./img/logo.jpg" height="150px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown fuentes">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/noticias.html">Noticias</a>
