--- a/entrega-main/pages/imagenes.html
+++ b/entrega-main/pages/imagenes.html
@@ -12,19 +12,17 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-
+        <nav class="navbar navbar-expand-lg bg-body-tertiary banner ">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" height="150px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown fuentes">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/noticias.html">Noticias</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../pages/imagenes.html">Imagenes</a>
                         </li>
@@ -34,25 +32,40 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
         </nav>
-
     </header>
     <main>
         <div class="title">
             <h1> Imagenes </h1>
         </div>
 
-        <section class="imagenes">
-            <div class>
+        <section class="imagenes ">
+            <div class="centrador">
                 <img src="../img/imagen1.jpg" class="img-fluid" alt="loro">
             </div>
-            <div>
+            <div class="centrador">
                 <img src="../img/imagen3.jpg" class="img-fluid" alt="boca">
             </div>
+            <div class="centrador">
+                <img src="../img/imagen4.jpg" class="img-fluid" alt="boca">
+            </div>
+            <div class="centrador">
+                <img src="../img/immagen3.jpg" class="img-fluid" alt="boca">
+            </div>
+            <div class="centrador">
+                <img src="../img/onions.jpg" class="img-fluid" alt="boca">
+            </div>
+            <div class="centrador">
+                <img src="../img/imagen7.jpg" class="img-fluid" alt="boca">
+            </div>
+            <div class="centrador">
+                <img src="../img/imagen8.jpg" class="img-fluid" alt="boca">
+            </div>
+
+
         </section>
     </main>
 
