--- a/entrega-main/pages/quienes.html
+++ b/entrega-main/pages/quienes.html
@@ -13,21 +13,19 @@
 
 
 <body>
-    
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
 
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary banner ">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="../index.html"><img src="../img/logo.jpg" height="150px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon" ></span>
-              </button>
-                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navbar1" id="navbarNavDropdown fuentes">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/noticias.html">Noticias</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="../pages/imagenes.html">Imagenes</a>
                         </li>
@@ -37,29 +35,49 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
         </nav>
-
     </header>
-
     <main>
         <div class="title">
             <h1> Quienes somos</h1>
         </div>
+
+        <h2>Bienvenidos a Frutas Frescas Locales, tu fuente de frutas y verduras frescas, naturales y libres de pesticidas. Somos una empresa comprometida con la salud, el bienestar y el cuidado del medio ambiente, ofreciendo productos de la más alta calidad,
+            cultivados con amor y respeto por la naturaleza.</h2>
 
         <div class="video">
             <video width="auto" height="auto" controls>
                     <source src="../img/video.mp4" type="video/mp4">                    
                 </video>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eaque fugit optio quam vero vitae voluptatibus maiores perferendis, libero eveniet quos. Placeat, saepe. Provident aperiam possimus, velit reprehenderit quodveniam.
-        </p>
+        <section class="lista-detalles">
+            <p>Nuestra Historia: Fundada en 2010, Frutas Frescas Locales nace del deseo de proporcionar a nuestra comunidad alimentos saludables y nutritivos. Iniciamos como una pequeña huerta familiar y, gracias al apoyo de nuestros clientes y la pasión
+                por lo que hacemos, hemos crecido para convertirnos en una empresa reconocida en la región. Nos enorgullece seguir siendo una entidad local, con raíces profundas en nuestra comunidad y un firme compromiso con la sostenibilidad.
+            </p>
+            <p>Nuestra Misión: Nuestra misión es cultivar y distribuir frutas y verduras frescas, naturales y sin pesticidas, garantizando la máxima calidad y sabor en cada producto. Creemos en prácticas agrícolas sostenibles que protejan el medio ambiente,
+                promuevan la biodiversidad y aseguren la salud de las generaciones presentes y futuras.</p>
+            <p>
+                Nuestros Valores:
+            </p>
+
+            <ul>
+                <li>Sostenibilidad: Implementamos técnicas agrícolas respetuosas con el medio ambiente, utilizando métodos naturales y orgánicos para cultivar nuestras frutas y verduras.</li>
+                <li>Calidad: Seleccionamos cuidadosamente nuestras semillas y supervisamos cada etapa del crecimiento de nuestros cultivos para ofrecer productos frescos y nutritivos.</li>
+                <li>Transparencia: Valoramos la confianza de nuestros clientes y mantenemos una comunicación abierta sobre nuestros métodos de cultivo y los beneficios de consumir productos naturales.</li>
+                <li>Compromiso Local: Apoyamos la economía local, colaborando con otros productores y participando en ferias y mercados de la comunidad.</li>
+
+            </ul>
+            Transparencia: Valoramos la confianza de nuestros clientes y mantenemos una comunicación abierta sobre nuestros métodos de cultivo y los beneficios de consumir productos naturales. Compromiso Local: Apoyamos la economía local, colaborando con otros productores
+            y participando en ferias y mercados de la comunidad.
+
+        </section>
+
     </main>
     <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio harum mollitia itaque molestiae voluptatem enim facere reprehenderit vitae est aperiam, voluptas aliquid laborum aliquam expedita quibusdam esse, eligendi natus tenetur?</p>
+        <p>Gracias por confiar en Frutas Frescas Locales. ¡Cultivamos salud y bienestar para ti y tu familia!</p>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
