--- a/entrega-main/pages/imagenes.html
+++ b/entrega-main/pages/imagenes.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
     </main>
 
     <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio harum mollitia itaque molestiae voluptatem enim facere reprehenderit vitae est aperiam, voluptas aliquid laborum aliquam expedita quibusdam esse, eligendi natus tenetur?</p>
+        <p>Todas las fotos anteriores son verdaderamente de nuestros productos</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
