--- a/entrega-main/pages/noticias.html
+++ b/entrega-main/pages/noticias.html
@@ -4,10 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Frutas Frescas Locales - Tu Tienda de Frutas de Origen Local</title>
+
+    <!-- Meta Descriptions -->
+    <meta name="description" content="Frutas Frescas Locales ofrece las frutas más frescas y deliciosas directamente de los agricultores locales a tu mesa. Compra frutas de calidad y apoya a los productores locales.">
+    <meta name="keywords" content="frutas frescas, frutas locales, tienda de frutas, agricultores locales, frutas orgánicas">
+    <meta name="author" content="Frutas Frescas Locales">
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Frutas Frescas Locales - Tu Tienda de Frutas de Origen Local">
+    <meta property="og:description" content="Frutas Frescas Locales ofrece las frutas más frescas y deliciosas directamente de los agricultores locales a tu mesa. Compra frutas de calidad y apoya a los productores locales.">
+    <meta property="og:image" content="https://yourwebsite.com/img/principal.jpg">
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Frutas Frescas Locales - Tu Tienda de Frutas de Origen Local">
+    <meta name="twitter:description" content="Frutas Frescas Locales ofrece las frutas más frescas y deliciosas directamente de los agricultores locales a tu mesa. Compra frutas de calidad y apoya a los productores locales.">
+    <meta name="twitter:image" content="https://yourwebsite.com/img/principal.jpg">
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/styles.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 
@@ -51,7 +72,7 @@
                         <img src="../img/noticia1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Premios</h5>
-                            <p class="card-text">¡Nos enorgullece anunciar que hemos ganado el premio a la Mejor Calidad en Frutas Frescas 2024! Gracias a nuestros agricultores locales por su dedicación y a nuestros clientes por su apoyo. </p>
+                            <p class="card-text">¡Nos enorgullece anunciar que hemos ganado el premio a la Mejor Calidad en Frutas Frescas 2022! Gracias a nuestros agricultores locales por su dedicación y a nuestros clientes por su apoyo. </p>
                         </div>
                     </div>
                 </div>
@@ -77,8 +98,8 @@
                     <div class="card">
                         <img src="../img/frutas y verduras.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Furtas y Verduras súper frescas</h5>
-                            <p class="card-text">Eliminando intermediarios, nos aseguramos de la frescura de nuestros productos, entregando así la mejor calidad posible</p>
+                            <h5 class="card-title">Frutas y Verduras súper frescas</h5>
+                            <p class="card-text">Eliminando intermediarios, nos aseguramos de la frescura de nuestros productos, entregando así la mejor calidad posible para nuestros clientes </p>
                         </div>
                     </div>
                 </div>
